log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
      - name: shared-files
        emptyDir: {}
      - name: shared-storage
        persistentVolumeClaim:
          claimName: shared-pvc
      containers:
      - name: writer
        image: duonghoang711/log-output-writer:1.10
        volumeMounts:
        - name: shared-files
          mountPath: /usr/src/app/files
      - name: reader
        image: duonghoang711/log-output-reader:1.11
        volumeMounts:
        - name: shared-files
          mountPath: /usr/src/app/files
        - name: shared-storage
          mountPath: /usr/src/app/data
        ports:
        - containerPort: 3000
